--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Devesh</title>
+
+    <meta name="author" content="Devesh Chouhan">
+    <meta name="description" content="Welcome to Devesh Chouhan's portfolio. Explore my projects, skills, and contact information.">
+    <meta name="keywords" content="Devesh Chouhan, portfolio, web development, projects, networking, programming">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="index, follow">    
+<meta property="og:title" content="Portfolio - Devesh Chouhan">
+<meta property="og:description" content="Explore my work, skills, and projects in web development and networking.">
+<meta property="og:image" content="URL_TO_YOUR_PROFILE_IMAGE_OR_PROJECT_IMAGE">
+<meta property="og:url" content="URL_TO_YOUR_PORTFOLIO">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Portfolio - Devesh Chouhan">
+<meta name="twitter:description" content="Discover my latest projects, skills, and contact information.">
+<meta name="twitter:image" content="URL_TO_YOUR_PROFILE_IMAGE_OR_PROJECT_IMAGE">
+
+    
     <style>
         body {
             font-family: Arial, sans-serif;
